--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(JavaUtil)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(JavaUtil main.cpp include/java_util/Arrays.h src/java_util/Arrays.cpp)
+add_executable(JavaUtil main.cpp examples/java_util/Vector_1.cpp)
+include_directories(include)
